syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.Services.Review.v1.Grpc";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service PingService {
  rpc Ping(google.protobuf.Empty) returns (PingResponse) {
    option (google.api.http) = {
      get: "/ping"
    };
  }
}

service ReviewService {
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse) {
    option (google.api.http) = {
      get: "/api/reviews/{product_id}"
    };
  }
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse) {
    option (google.api.http) = {
      post: "/api/reviews"
      body: "*"
    };
  }
  rpc EditReview(EditReviewRequest) returns (EditReviewResponse) {
    option (google.api.http) = {
      put: "/api/reviews/{review_id}/{content}"
    };
  }
  rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse) {
    option (google.api.http) = {
      delete: "/api/reviews/{review_id}"
    };
  }
}

message ReviewDto {
  string id = 1;
  string content = 2;
  string author_id = 3;
  string author_name = 4;
  string product_id = 5;
  string product_name = 6;
}

/*message ProductDto {
  string id = 1;
  string name = 2;
  string desc = 3;
  double price = 4;
}*/

message AuthorDto {
  string id = 1;
  string user_name = 2;
}

message PingResponse {
  string message = 1;
}

message GetReviewsRequest {
  string product_id = 1;
}

message GetReviewsResponse {
  repeated ReviewDto reviews = 1;
}

message CreateReviewRequest {
  string product_id = 1;
  string user_id = 2;
  string content = 3;
}

message CreateReviewResponse {
  ReviewDto result = 1;
}

message DeleteReviewRequest {
  string review_id = 1;
}

message DeleteReviewResponse {
  string id = 1;
}

message EditReviewRequest {
  string review_id = 1;
  string content = 2;
}

message EditReviewResponse {
  ReviewDto result = 1;
}
